Applied some findbugs hints